Add ApiFilter & ApiProperty for Plat & Menu

--- a/templates/Security/login.html.twig
+++ b/templates/Security/login.html.twig
@@ -21,7 +21,7 @@
         <div class="mb-3">
             <label for="username" class="form-label">Adresse email</label>
             <input type="email" class="form-control" id="username" name="_username"
-                placeholer="exemple@le-quai-antique.fr" value="{{ Nom }}">
+                placeholer="exemple@le-quai-antique.fr" value="{{ email }}">
             <div id="emailHelp" class="form-text">Votre email ne sera jamais partagé avec des tiers.</div>
         </div>
         <div class="mb-3">
